# DRF-24.1

./: .envsample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
courses/: models.py  serializers.py  tasks.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_courses_image.py  0003_courses_owner.py
fixtures/: courses_data.json  lessons_data.json  payments_data.json  user_data.json
lessons/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
lessons/migrations/: 0001_initial.py  0002_alter_lessons_course.py  0003_alter_lessons_options.py  0004_lessons_owner.py  0005_alter_lessons_course.py
subscriptions/: models.py  tests.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py
users/: admin.py  models.py  permission.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_user.py  0004_alter_payments_payed_course_and_more.py  0005_alter_user_city.py  0006_remove_payments_value_payments_amount_payments_link_and_more.py  0007_alter_user_last_login.py  0008_alter_user_last_login.py
