[tool.poetry]
name = "drf-24-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "drf_24"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
python-dotenv = "^1.0.1"
django-filter = "^24.2"
djangorestframework-simplejwt = "^5.3.1"
pytest-html = "^4.1.1"
coverage = "^7.5.4"
drf-yasg = "^1.21.7"
setuptools = "^70.1.1"
stripe = "^10.0.0"
forex-python = "^1.8"
celery = "^5.4.0"
redis = "^5.0.7"
django-celery-beat = "^2.6.0"
eventlet = "^0.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
